do some changes

--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
         <!-- Coins -->
         <div class="coin white" id="white1"></div>
         <div class="coin white" id="white2"></div>
+        <div class="coin white" id="white4"></div>
         <div class="coin white" id="white3"></div>
         <div class="coin black" id="black1"></div>
         <div class="coin black" id="black2"></div>
+        <div class="coin black" id="black3"></div>
+        <div class="coin black" id="black4"></div>
 
         <div class="coin red" id="redCoin"></div>
 
@@ -41,8 +44,10 @@
         
         <label for="angleControl" class="form-label">Angle:</label>
          <input type="range" id="angleControl" min="0" max="360" value="90" class="form-range">
+         
+         <canvas id="predictionCanvas" width="500" height="500"></canvas>
 
-        <!-- Existing elements -->
+         <!-- Existing elements -->
         <input type="range" id="horizontalControl" min="89" max="390" value="238" step="1" />
 
 
