add score board

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
       <!-- Controls -->
       <div id="controls" class="mt-4 text-center">
+        <div id="scoreBoard">Score: 0</div>
+
         <label for="speedControl" class="form-label">Speed:</label>
         <input type="range" id="speedControl" min="1" max="10" value="5" class="form-range">
         
